--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     },
     "dependencies": {
         "@better-scroll/core": "^2.4.2",
+        "@better-scroll/slide": "^2.4.2",
+        "@icon-park/vue-next": "^1.3.6",
         "@varlet/ui": "^1.27.7",
+        "@vueuse/core": "^8.4.2",
         "axios": "^0.27.2",
         "core-js": "^3.6.5",
         "normalize.css": "^8.0.1",
-        "vue": "^3.0.0",
-        "vue-router": "^4.0.0-0",
-        "@icon-park/vue-next": "^1.3.6"
+        "swiper": "^8.1.4",
+        "vue": "^3.2.25",
+        "vue-router": "^4.0.13"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.15",
