--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@vueuse/core": "^8.4.2",
         "axios": "^0.27.2",
         "core-js": "^3.6.5",
+        "html2canvas": "^1.4.1",
         "normalize.css": "^8.0.1",
         "swiper": "^8.1.4",
         "vue": "^3.2.25",
